# Aegis

./: .gitignore  Aegis.sln  CONTRIBUTING.md  INTEGRITY_REPORT.md  RAG_AUDIT_LOG.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd-nuget.yml  cd-pypi.yml  ci.yml
docs/: SAMPLES.md  whitepaper.md
samples/Aegis.Sample.AzureProducer/: Aegis.Sample.AzureProducer.csproj  Program.cs
samples/Aegis.Sample.BenchmarkJudge/: INTEGRITY_REPORT.md  judge.py  rag_benchmark.py  ragas_benchmark.py
samples/Aegis.Sample.Console/: Aegis.Sample.Console.csproj  Program.cs
samples/aegis_sample_python/: main.py
src/Aegis.Integrity/: Aegis.Integrity.csproj
src/Aegis.Integrity.Tests/: Aegis.Integrity.Tests.csproj  GridLawTests.cs
src/Aegis.Integrity/Diagnostics/: AegisLoggerExtensions.cs
src/Aegis.Integrity/Discovery/: GridLawDetector.cs
src/Aegis.Integrity/Pipelines/: AegisEngine.cs  IntegrityPipe.cs
src/Aegis.Integrity/Polyfills/: IsExternalInit.cs
src/Aegis.Integrity/Protocol/: GeometricAtoms.cs  GeometricChunk.cs  GeometricManifest.cs
src/Aegis.Producer/: Aegis.Producer.csproj  DocumentIntelligenceAdapter.cs
src/Aegis.Visualizer/: Aegis.Visualizer.csproj  App.xaml  App.xaml.cs  LocalWindowHelper.cs  MainWindow.xaml  MainWindow.xaml.cs
src/python/: pyproject.toml
src/python/aegis_integrity/: __init__.py  aegis_integrity.py
src/python/tests/: test_gip_2.py
