[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-integrity"
version = "0.1.0"
description = "Geometric Integrity Protocol for RAG - Python Wrapper"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pdfplumber>=0.11.0"
]
authors = [
    {name = "Digvijay Chauhan"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_integrity*"]
